========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'default' branch.


2018-12-18

  - Fixed #214: Add directory of current filename to sys.path with new option
    "insert_pythonpath". When this option is encountered in a file, we prepend
    the path of the file in which it is encountered at the front of the
    PYTHONPATH for the rest of the duration of the problem (we could consider
    resetting this after parsing and processing the plugins; not doing it now).

  - Added detection of hitting the root if the search for the repository root
    failed.

  - Fixed #341: find_repository_root() fails on source tarball. Renamed PKGINFO
    to PKG-INFO to match what pip sdist produces.

  - Change version number from 2.2.0-devel to 2.2.0-dev which apparently is
    recognized by pip (thanks Jakob Schnitzer).
    https://bitbucket.org/blais/beancount/pull-requests/91/default/diff#comment-85707662


2018-12-12

  - Suppressed almost all the Python 3.8 warnings.


2018-11-16

  - Added more logging in loader (done while debugging something else).


2018-10-26

  - Fixed #302: Fixed second bug with font-locking for account names (starting
    with digit).

  - Fixed bug ingest that would cause relative filenames to fail.
    See this thread for details:
    https://groups.google.com/d/msgid/beancount/709141d5-88a4-444a-acef-94bf43a9b388%40googlegroups.com?utm_medium=email&utm_source=footer

  - Fixed bug in ingest whereby the custom duplicates detection function wasn't
    being called.


2018-10-25

  - Fixed unit test failure on BitBucket pipelines using a temp directory
    context manager.

  - Applied PR by Richard W to install the mixins package (install was broken).

  - Fixed #302: beancount.el does not fontify account names with single letter
    components (based on bug report by arianaut@).


2018-10-13

  - Fixed #158: Missing MIME type for QFX files.


2018-10-04
